--- a/index.html
+++ b/index.html
@@ -255,11 +255,11 @@
       <thead class="thead-dark">
         <tr>
           <th scope="col">FAVOURITE</th>
-          <th scope="col">FirstPERSON</th>
-          <th scope="col">SecondPERSON</th>
-          <th scope="col">ThirdPERSON</th>
-          <th scope="col">FourthPerson</th>
-          <th scope="col">FifthPerson</th>
+          <th scope="col">Tarun MS</th>
+          <th scope="col">Vedhantha J</th>
+          <th scope="col">Soma Shekara</th>
+          <th scope="col">Arshiya</th>
+          <th scope="col">Amina</th>
         </tr>
       </thead>
       <tbody>
